# KokoroPixel

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: dockspace.h
src/: dockspace.cpp  main.cpp
